# django-app

17_DataExport/djsale/app_news/: admin.py  models.py  sitemap.py  urls.py  views.py
17_DataExport/djsale/app_rss/: feeds.py
17_DataExport/djsale/djsale/: settings.py  urls.py
17_DataExport/djsale/real_estate/: admin.py  feeds.py  models.py  sitemap.py  urls.py  views.py
M_01_LinuxIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/shopapp/: urls.py  views.py
M_03_DatabaseAndModels/mysite/mysite/: settings.py  urls.py
M_03_DatabaseAndModels/mysite/shopapp/: models.py  urls.py  views.py
M_04_DjangoAdmin/mysite/mysite/: settings.py
M_05_RequestsAndMiddlewares/mysite/mysite/: settings.py  urls.py
M_05_RequestsAndMiddlewares/mysite/requestdataapp/: middlewares.py  urls.py  views.py
M_05_RequestsAndMiddlewares/mysite/shopapp/: admin.py  admin_mixins.py  models.py  urls.py  views.py
M_06_Forms/mysite/mysite/: settings.py  urls.py
M_06_Forms/mysite/requestdataapp/: forms.py  views.py
M_06_Forms/mysite/shopapp/: forms.py  models.py  urls.py  views.py
M_07_CBV/mysite/mysite/: settings.py  urls.py
M_07_CBV/mysite/shopapp/: apps.py  urls.py  views.py
M_08_Auth/mysite/myauth/: urls.py
M_08_Auth/mysite/mysite/: settings.py
M_08_Auth/mysite/shopapp/: urls.py  views.py
M_09_permissions/mysite/myauth/: models.py  urls.py  views.py
M_09_permissions/mysite/mysite/: settings.py
M_09_permissions/mysite/shopapp/: views.py
M_14_Docs/: requirements.txt
M_15_queries/: README.md
M_19_prod/: pyproject.toml  requirements.txt
(+153 files in other folders)
