[tool.poetry]
name = "m-19-prod"
version = "0.1.0"
description = ""
authors = ["Natal Mirosh <Papina888@yandex.ru>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
